--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,9 @@
 language: java
 
-sudo: false
-
 jdk:
-  - oraclejdk8
+- oraclejdk10
+
+sudo: false
 
 install: true
 
@@ -12,7 +12,7 @@ before_install:
   - "sh -e /etc/init.d/xvfb start"
 
 script:
-- ./gradlew check
+- ./gradlew --stacktrace check
 
 after_success:
 - ./gradlew jacocoTestReport coveralls
@@ -22,10 +22,6 @@ env:
    - secure: "UVIbeoJpx9n0KSWHbpdWZuR4zeZfXw3JQBq2Zb1h0/j4uREfXWiGFuNVQBPjsdtYi2+LkecjJ/MgKWo+SS0SjsvTa/ZPkOXt4408H1qYgwVnvWoeL/g1QQ6T8ADNysl/4ZtJLnSp0WXYEBkfHYZJD++vgDwkpVhnCLVzSFVAHls="
 
 addons:
-  apt:
-    packages:
-      - oracle-java8-installer
-
   coverity_scan:
     project:
       name: "micheljung/downlords-faf-client"
