--- a/build.gradle
+++ b/build.gradle
@@ -26,6 +26,7 @@ plugins {
   id "com.install4j.gradle" version "6.1.1"
   id "co.riiid.gradle" version "0.4.2"
   id "de.undercouch.download" version "3.2.0"
+  id "io.franzbecker.gradle-lombok" version "1.14"
 }
 
 apply plugin: 'java'
@@ -36,8 +37,8 @@ apply plugin: 'com.github.kt3k.coveralls'
 apply plugin: 'distribution'
 
 
-sourceCompatibility = JavaVersion.VERSION_1_8
-targetCompatibility = JavaVersion.VERSION_1_8
+sourceCompatibility = JavaVersion.VERSION_1_10
+targetCompatibility = JavaVersion.VERSION_1_10
 
 version = '0.9.0-beta-rc.3'
 
@@ -52,6 +53,11 @@ processResources {
 
 configurations {
   compile.exclude module: "assertj-core"
+}
+
+lombok {
+  version = "${lombokVersion}"
+  sha256 = ""
 }
 
 class HttpBuilder extends HTTPBuilder {
@@ -270,7 +276,7 @@ repositories {
 }
 
 jacoco {
-  toolVersion = "0.7.5.201505241946"
+  toolVersion = "0.8.1"
 }
 
 dependencyManagement {
@@ -308,16 +314,16 @@ dependencies {
   compile("com.github.micheljung:JJsonRpc:01a7fba5f4")
   compile("javax.inject:javax.inject:1")
   compile("com.fasterxml.jackson.datatype:jackson-datatype-jsr310:${jacksonDatatypeJsr310Version}")
-  compile("org.projectlombok:lombok:${lombokVersion}")
   compile("com.github.rutledgepaulv:q-builders:${qBuildersVersion}")
   compile("com.github.nsp:JSkills:${jSkillsVersion}")
   compile("com.github.jasminb:jsonapi-converter:${jsonapiConverterVersion}")
   compile("com.github.Brutus5000:BiReUS-JCL:${bireusVersion}")
-//  compile("com.jfoenix:jfoenix:${jfoenixVersion}")
+  compile("com.jfoenix:jfoenix:${jfoenixVersion}")
+  compile("javax.annotation:javax.annotation-api:1.3.1")
 
   compile project(":webview-patch")
+  implementation 'org.javassist:javassist:3.23.1-GA'
 
-  compile("com.github.micheljung:JFoenix:6d00b59ca5327ca2754c63c94285b92a3badf7c5")
   provided("com.install4j:install4j-runtime:${install4jRuntimeVersion}")
 
   testCompile 'junit:junit:4.11'
