ixes #946 New Gradle version & Eclipse JavaFx fix
Edit: Removed unnecessary rules for JavaFX since JavaFX is now a normal dependency (squashed)

--- a/build.gradle
+++ b/build.gradle
@@ -38,6 +38,8 @@ apply plugin: 'jacoco'
 apply plugin: 'com.github.kt3k.coveralls'
 apply plugin: 'distribution'
 
+apply from: 'build-eclipse.gradle'
+
 
 sourceCompatibility = JavaVersion.VERSION_1_10
 targetCompatibility = JavaVersion.VERSION_1_10
