--- a/build.gradle
+++ b/build.gradle
@@ -239,6 +239,7 @@ jacoco {
 }
 
 dependencies {
+  compile ("com.bugsnag:bugsnag:3.1.6")
   compile("org.springframework.boot:spring-boot-starter")
   compile("org.springframework.boot:spring-boot-starter-cache")
   compile("org.springframework.boot:spring-boot-starter-logging")
