--- a/gradle.properties
+++ b/gradle.properties
@@ -14,3 +14,4 @@ bireusVersion=1c2984230357955457e52bd39ca56c5a18977295
 install4jRuntimeVersion=7.0.4
 jfoenixVersion=9.0.6
 javassist.version=3.23.1-GA
+install4jHomeDir=/home/geosearchef/Programs/install4j7
