Publish releases to GitHub

--- a/.travis.yml
+++ b/.travis.yml
@@ -26,8 +26,27 @@ script:
 after_success:
   - ./gradlew jacocoTestReport coveralls
   - if [ -n "${TRAVIS_TAG}" ]; then
-      ./gradlew --stacktrace -Pversion=${VERSION} -Pinstall4jHomeDir="$HOME/install4j/install4j7.0.7" -Pinstall4jLicense=${install4jLicense} buildInstall4jMediaFiles;
+      ./gradlew --stacktrace -Pversion=${VERSION} -Pinstall4jHomeDir="$HOME/install4j/install4j7.0.7" -Pinstall4jLicense=${install4jLicense} buildInstall4jMediaFiles &&
+      RELEASE_BODY=$(python build-release-body.py ${VERSION});
     fi
+
+deploy:
+  provider: releases
+  api_key: ${gitHubToken}
+  file_glob: true
+  file:
+    - build/install4j/*.exe
+    - build/install4j/*.zip
+    - build/install4j/*.gz
+    - build/install4j/*.deb
+    - build/install4j/*.rpm
+  skip_cleanup: true
+  name: v${VERSION}
+  draft: true
+  prerelease: true
+  body: ${RELEASE_BODY}
+  on:
+    tags: true
 
 env:
   global:
