Properly override 'javassist.version'
As far as I understand, Spring's dependency management should pick up
what's defined in the `dependencies` section, but it overrode it with
javassist 3.21.1-GA. Also, setting `javassist.version` should allow
to just declare the dependency as `org.javassist:javassist` but
this didn't work either (Gradle tried to download it w/o version) so
I must've been doing something wrong.

The implemented solution probably isn't the best way but I couldn't
figure out what I overlooked. Also, the dependency management for
javassist has been removed in Spring Boot 2.0.0.M6 anyway.

https://github.com/spring-projects/spring-boot/issues/11225

--- a/webview-patch/build.gradle
+++ b/webview-patch/build.gradle
@@ -13,5 +13,5 @@ jar {
 }
 
 dependencies {
-  implementation 'org.javassist:javassist:3.23.1-GA'
+  compile ("org.javassist:javassist:${project.ext['javassist.version']}")
 }
