--- a/build.gradle
+++ b/build.gradle
@@ -325,7 +325,7 @@ dependencies {
   compile("javax.annotation:javax.annotation-api:1.3.1")
 
   compile project(":webview-patch")
-  implementation 'org.javassist:javassist:3.23.1-GA'
+  compile ("org.javassist:javassist:${project.ext['javassist.version']}")
 
   provided("com.install4j:install4j-runtime:${install4jRuntimeVersion}")
 
