--- a/gradle.properties
+++ b/gradle.properties
@@ -12,3 +12,4 @@ jsonapiConverterVersion=0b3b2466c8801f8f79d1034d780203fc37049054
 bireusVersion=1c2984230357955457e52bd39ca56c5a18977295
 install4jRuntimeVersion=7.0.4
 jfoenixVersion=9.0.6
+javassist.version=3.23.1-GA
