--- a/build.gradle
+++ b/build.gradle
@@ -40,7 +40,7 @@ apply plugin: 'distribution'
 sourceCompatibility = JavaVersion.VERSION_1_10
 targetCompatibility = JavaVersion.VERSION_1_10
 
-version = '0.9.0-beta-rc.3'
+version "${version}"
 
 compileJava.dependsOn(processResources)
 processResources {
@@ -190,6 +190,7 @@ task buildInstall4jMediaFiles(type: Install4jTask) {
   release = version
 
   doFirst {
+    println "Building version ${version}"
     if (!project.hasProperty('install4jHomeDir')) {
       throw new RuntimeException('Specify install4jHomeDir in gradle.properties and set it to an install4j installation directory')
     }
@@ -239,7 +240,7 @@ task unpackIceAdapterLinux(type: Copy, dependsOn: downloadIceAdapterLinux) {
   group "native dependencies"
   from tarTree(resources.gzip(downloadIceAdapterLinux.outputs.files.singleFile))
   into file("${buildDir}/resources/native")
-} 
+}
 
 task downloadUnixUid(type: Download) {
   group "native dependencies"
