Explicitly specify name `webview-patch.jar`

--- a/webview-patch/build.gradle
+++ b/webview-patch/build.gradle
@@ -6,6 +6,10 @@ repositories {
   mavenCentral()
 }
 
+configurations {
+  jar.archiveName = 'webview-patch.jar'
+}
+
 jar {
   manifest {
     attributes "Premain-Class": "com.faforever.client.webviewpatcher.TransparentWebViewPatch"
