--- a/gradle.properties
+++ b/gradle.properties
@@ -2,15 +2,20 @@ version=unspecified
 faf_ice_adapter_version=6.3.2
 faf_uid_version=4.0.4
 propdepsVersion=0.0.7
-springBootVersion=1.5.14.RELEASE
+springBootVersion=2.1.0.RC1
+springSecurityOauth2AutoconfigureVersion=2.0.0.RELEASE
 lombokVersion=1.18.2
-mockitoVersion=2.22.0
 fafCommonsVersion=a53e12ef0b475c82e690b46d0a02ea95a866e941
-jacksonDatatypeJsr310Version=2.8.6
-qBuildersVersion=1.5
+jacksonDatatypeJsr310Version=2.9.7
+qBuildersVersion=1.6
 jSkillsVersion=8b333ec63d
-jsonapiConverterVersion=0b3b2466c8801f8f79d1034d780203fc37049054
+jsonapiConverterVersion=0.9
 bireusVersion=1c2984230357955457e52bd39ca56c5a18977295
-install4jRuntimeVersion=7.0.4
+install4jRuntimeVersion=7.0.7
 jfoenixVersion=9.0.6
 javassist.version=3.23.1-GA
+javafxVersion=11
+javafxPlatform=win
+coverallsGradlePluginVersion=2.8.2
+jnaVersion=5.0.0
+jacocoVersion=0.8.2
