--- a/build.gradle
+++ b/build.gradle
@@ -325,6 +325,7 @@ dependencies {
   compile("javax.annotation:javax.annotation-api:1.3.1")
   compile("com.github.ben-manes.caffeine:caffeine")
   compile("org.apache.httpcomponents:httpclient")
+  compile("javax.xml.bind:jaxb-api")
 
   compile("org.openjfx:javafx-base:${javafxVersion}:${javafxPlatform}")
   compile("org.openjfx:javafx-controls:${javafxVersion}:${javafxPlatform}")
