--- a/gradle.properties
+++ b/gradle.properties
@@ -1,4 +1,5 @@
 version=unspecified
+javafxPlatform=unspecified
 faf_ice_adapter_version=6.3.2
 faf_uid_version=4.0.4
 propdepsVersion=0.0.7
@@ -15,7 +16,6 @@ install4jRuntimeVersion=7.0.7
 jfoenixVersion=9.0.6
 javassist.version=3.23.1-GA
 javafxVersion=11
-javafxPlatform=win
 coverallsGradlePluginVersion=2.8.2
 jnaVersion=5.0.0
 jacocoVersion=0.8.2
